added customers dt

--- a/public/admin-beta/customers.html
+++ b/public/admin-beta/customers.html
@@ -349,23 +349,21 @@
                   <thead>
                     <tr>
                       <th>Name</th>
-                      <th>ACN</th>
-                      <th>Total</th>
-                      <th>Min</th>
-                      <th>Date Created</th>
-                      <th>Balance</th>
-                      <th>Status</th>
+                      <th>ID</th>
+                      <th>Phone</th>
+                      <th>Address</th>
+                      <th>Email</th>
+                      <th>Date Joined</th>
                     </tr>
                   </thead>
                   <tfoot>
                     <tr>
                       <th>Name</th>
-                      <th>ACN</th>
-                      <th>Total</th>
-                      <th>Min</th>
-                      <th>Date Created</th>
-                      <th>Balance</th>
-                      <th>Status</th>
+                      <th>ID</th>
+                      <th>Phone</th>
+                      <th>Address</th>
+                      <th>Email</th>
+                      <th>Date Joined</th>
 
                     </tr>
                   </tfoot>
@@ -444,7 +442,7 @@
   <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
   <!-- Page level custom scripts -->
-  <script src="js/demo/datatables-demo.js"></script>
+  <script src="js/demo/customers-datatables.js"></script>
 
 </body>
 
