--- a/public/admin-beta/index.html
+++ b/public/admin-beta/index.html
@@ -295,6 +295,17 @@
                   <div class="chart-area">
                     <canvas id="myAreaChart"></canvas>
                   </div>
+                  <div class="mt-4 text-center small">
+                    <span class="mr-2">
+                      <i class="fas fa-circle text-primary"></i> 2019
+                    </span>
+                    <span class="mr-2">
+                      <i class="fas fa-circle text-danger"></i> 2018
+                    </span>
+                    <span class="mr-2">
+                      <i class="fas fa-circle text-warning"></i> 2017
+                    </span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -322,7 +333,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <div class="chart-pie pt-4 pb-2">
+                  <div class="chart-pie pt-4 pb-2" style="    margin-bottom: 67px;">
                     <canvas id="myPieChart"></canvas>
                   </div>
                   <div class="mt-4 text-center small">
