added deposits page

--- a/public/admin-beta/index.html
+++ b/public/admin-beta/index.html
@@ -68,6 +68,7 @@
             <!-- <h6 class="collapse-header">Custom Components:</h6> -->
             <a class="collapse-item" href="accounts.html">Accounts</a>
             <a class="collapse-item" href="customers.html">Customers</a>
+            <a class="collapse-item" href="deposits.html">Deposits</a>
           </div>
         </div>
       </li>
